<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/navigation_doctor"
        android:icon="@drawable/ic_nav_doctor"
        android:title="@string/nav_doctor" />

    <item
        android:id="@+id/navigation_trend"
        android:icon="@drawable/ic_nav_trend"
        android:title="@string/nav_trend" />

    <item
        android:id="@+id/navigation_device"
        android:icon="@drawable/ic_nav_device"
        android:title="@string/nav_device" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/nav_profile" />
</menu>
